# currencies/src/app/services/openapi.json
@@ -86,6 +86,52 @@
                 }
             }
         },
+        "/user/unsubscribeCurrency": {
+            "patch": {
+                "summary": "Unsuscribe to a currency",
+                "tags": [
+                    "Users"
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/SuscribeCurrencySchema"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successfully unsubscribed to currency!",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "5XX": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorsSchema"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/getCurrenciesHistory": {
             "get": {
                 "summary": "Get currencies history",
@@ -153,7 +199,7 @@
                 "properties": {
                     "currency": {
                         "type": "string",
-                        "example": "EUR"
+                        "example": "USD"
                     }
                 },
                 "required": [
